src/_parser/AlgoPractiseParser.py
# Generated from AlgoPractise.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AlgoPractiseParser ( Parser ):

    grammarFileName = "AlgoPractise.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'bool'", "'string'", "'num'", "'true'", 
                     "'false'", "'if'", "'else'", "'while'", "'and'", "'or'", 
                     "'return'", "<INVALID>", "'['", "']'", "'('", "')'", 
                     "'{'", "'}'", "':='", "<INVALID>", "<INVALID>", "'!'", 
                     "'=='", "'<='", "'>='", "'<'", "'>'", "'!='", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "','" ]

    symbolicNames = [ "<INVALID>", "BOOL_TYPE", "STR_TYPE", "NUM_TYPE", 
                      "TRUE", "FALSE", "IF", "ELSE", "WHILE", "AND", "OR", 
                      "RETURN", "ID", "L_BRACKET", "R_BRACKET", "L_PAR", 
                      "R_PAR", "L_CURLY", "R_CURLY", "ASSIGN", "NUMVAL", 
                      "STRINGVAL", "NEG", "EQUAL", "LTE", "GTE", "LT", "GT", 
                      "NE", "PLUS", "MINUS", "MULT", "DIV", "MOD", "COMMA", 
                      "NEWLINE", "WS", "COMMENT" ]

    RULE_start = 0
    RULE_func = 1
    RULE_func_decl = 2
    RULE_type = 3
    RULE_params = 4
    RULE_param_lst = 5
    RULE_param = 6
    RULE_block = 7
    RULE_stmts = 8
    RULE_stmt = 9
    RULE_dcl = 10
    RULE_assign_stmt = 11
    RULE_expr = 12
    RULE_val = 13
    RULE_cntrol = 14
    RULE_if_stmt = 15
    RULE_else_stmt = 16
    RULE_while_stmt = 17
    RULE_func_call = 18
    RULE_elmnt_list = 19

    ruleNames =  [ "start", "func", "func_decl", "type", "params", "param_lst", 
                   "param", "block", "stmts", "stmt", "dcl", "assign_stmt", 
                   "expr", "val", "cntrol", "if_stmt", "else_stmt", "while_stmt", 
                   "func_call", "elmnt_list" ]

    EOF = Token.EOF
    BOOL_TYPE=1
    STR_TYPE=2
    NUM_TYPE=3
    TRUE=4
    FALSE=5
    IF=6
    ELSE=7
    WHILE=8
    AND=9
    OR=10
    RETURN=11
    ID=12
    L_BRACKET=13
    R_BRACKET=14
    L_PAR=15
    R_PAR=16
    L_CURLY=17
    R_CURLY=18
    ASSIGN=19
    NUMVAL=20
    STRINGVAL=21
    NEG=22
    EQUAL=23
    LTE=24
    GTE=25
    LT=26
    GT=27
    NE=28
    PLUS=29
    MINUS=30
    MULT=31
    DIV=32
    MOD=33
    COMMA=34
    NEWLINE=35
    WS=36
    COMMENT=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(AlgoPractiseParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(AlgoPractiseParser.NEWLINE)
            else:
                return self.getToken(AlgoPractiseParser.NEWLINE, i)

        def func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoPractiseParser.FuncContext)
            else:
                return self.getTypedRuleContext(AlgoPractiseParser.FuncContext,i)


        def stmts(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoPractiseParser.StmtsContext)
            else:
                return self.getTypedRuleContext(AlgoPractiseParser.StmtsContext,i)


        def stmt(self):
            return self.getTypedRuleContext(AlgoPractiseParser.StmtContext,0)


        def getRuleIndex(self):
            return AlgoPractiseParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = AlgoPractiseParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==35:
                self.state = 40
                self.match(AlgoPractiseParser.NEWLINE)
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 55
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 53
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                    if la_ == 1:
                        self.state = 46
                        self.func()
                        self.state = 48 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while True:
                            self.state = 47
                            self.match(AlgoPractiseParser.NEWLINE)
                            self.state = 50 
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if not (_la==35):
                                break

                        pass

                    elif la_ == 2:
                        self.state = 52
                        self.stmts()
                        pass

             
                self.state = 57
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 58
                self.func()

            elif la_ == 2:
                self.state = 59
                self.stmt()


            self.state = 62
            self.match(AlgoPractiseParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(AlgoPractiseParser.TypeContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(AlgoPractiseParser.Func_declContext,0)


        def getRuleIndex(self):
            return AlgoPractiseParser.RULE_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc" ):
                listener.enterFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc" ):
                listener.exitFunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc" ):
                return visitor.visitFunc(self)
            else:
                return visitor.visitChildren(self)




    def func(self):

        localctx = AlgoPractiseParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_func)
        try:
            self.state = 68
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.type_()
                self.state = 65
                self.func_decl()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.func_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AlgoPractiseParser.ID, 0)

        def params(self):
            return self.getTypedRuleContext(AlgoPractiseParser.ParamsContext,0)


        def block(self):
            return self.getTypedRuleContext(AlgoPractiseParser.BlockContext,0)


        def getRuleIndex(self):
            return AlgoPractiseParser.RULE_func_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_decl" ):
                listener.enterFunc_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_decl" ):
                listener.exitFunc_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_decl" ):
                return visitor.visitFunc_decl(self)
            else:
                return visitor.visitChildren(self)




    def func_decl(self):

        localctx = AlgoPractiseParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_func_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(AlgoPractiseParser.ID)
            self.state = 71
            self.params()
            self.state = 72
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL_TYPE(self):
            return self.getToken(AlgoPractiseParser.BOOL_TYPE, 0)

        def L_BRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(AlgoPractiseParser.L_BRACKET)
            else:
                return self.getToken(AlgoPractiseParser.L_BRACKET, i)

        def R_BRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(AlgoPractiseParser.R_BRACKET)
            else:
                return self.getToken(AlgoPractiseParser.R_BRACKET, i)

        def STR_TYPE(self):
            return self.getToken(AlgoPractiseParser.STR_TYPE, 0)

        def NUM_TYPE(self):
            return self.getToken(AlgoPractiseParser.NUM_TYPE, 0)

        def getRuleIndex(self):
            return AlgoPractiseParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = AlgoPractiseParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.match(AlgoPractiseParser.BOOL_TYPE)
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==13:
                    self.state = 75
                    self.match(AlgoPractiseParser.L_BRACKET)
                    self.state = 76
                    self.match(AlgoPractiseParser.R_BRACKET)
                    self.state = 81
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.match(AlgoPractiseParser.STR_TYPE)
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==13:
                    self.state = 83
                    self.match(AlgoPractiseParser.L_BRACKET)
                    self.state = 84
                    self.match(AlgoPractiseParser.R_BRACKET)
                    self.state = 89
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 90
                self.match(AlgoPractiseParser.NUM_TYPE)
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==13:
                    self.state = 91
                    self.match(AlgoPractiseParser.L_BRACKET)
                    self.state = 92
                    self.match(AlgoPractiseParser.R_BRACKET)
                    self.state = 97
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_PAR(self):
            return self.getToken(AlgoPractiseParser.L_PAR, 0)

        def R_PAR(self):
            return self.getToken(AlgoPractiseParser.R_PAR, 0)

        def param_lst(self):
            return self.getTypedRuleContext(AlgoPractiseParser.Param_lstContext,0)


        def getRuleIndex(self):
            return AlgoPractiseParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = AlgoPractiseParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_params)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 100
                self.match(AlgoPractiseParser.L_PAR)
                self.state = 101
                self.match(AlgoPractiseParser.R_PAR)
                pass

            elif la_ == 2:
                self.state = 102
                self.match(AlgoPractiseParser.L_PAR)
                self.state = 103
                self.param_lst()
                self.state = 104
                self.match(AlgoPractiseParser.R_PAR)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_lstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoPractiseParser.ParamContext)
            else:
                return self.getTypedRuleContext(AlgoPractiseParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(AlgoPractiseParser.COMMA)
            else:
                return self.getToken(AlgoPractiseParser.COMMA, i)

        def getRuleIndex(self):
            return AlgoPractiseParser.RULE_param_lst

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_lst" ):
                listener.enterParam_lst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_lst" ):
                listener.exitParam_lst(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_lst" ):
                return visitor.visitParam_lst(self)
            else:
                return visitor.visitChildren(self)




    def param_lst(self):

        localctx = AlgoPractiseParser.Param_lstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_param_lst)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.param()
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==34:
                self.state = 109
                self.match(AlgoPractiseParser.COMMA)
                self.state = 110
                self.param()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(AlgoPractiseParser.TypeContext,0)


        def ID(self):
            return self.getToken(AlgoPractiseParser.ID, 0)

        def getRuleIndex(self):
            return AlgoPractiseParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = AlgoPractiseParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.type_()
            self.state = 117
            self.match(AlgoPractiseParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_CURLY(self):
            return self.getToken(AlgoPractiseParser.L_CURLY, 0)

        def stmts(self):
            return self.getTypedRuleContext(AlgoPractiseParser.StmtsContext,0)


        def R_CURLY(self):
            return self.getToken(AlgoPractiseParser.R_CURLY, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(AlgoPractiseParser.NEWLINE)
            else:
                return self.getToken(AlgoPractiseParser.NEWLINE, i)

        def getRuleIndex(self):
            return AlgoPractiseParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = AlgoPractiseParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.match(AlgoPractiseParser.L_CURLY)
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==35:
                    self.state = 120
                    self.match(AlgoPractiseParser.NEWLINE)
                    self.state = 125
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 126
                self.stmts()
                self.state = 127
                self.match(AlgoPractiseParser.R_CURLY)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.match(AlgoPractiseParser.L_CURLY)
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==35:
                    self.state = 130
                    self.match(AlgoPractiseParser.NEWLINE)
                    self.state = 135
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 136
                self.match(AlgoPractiseParser.R_CURLY)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoPractiseParser.StmtContext)
            else:
                return self.getTypedRuleContext(AlgoPractiseParser.StmtContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(AlgoPractiseParser.NEWLINE)
            else:
                return self.getToken(AlgoPractiseParser.NEWLINE, i)

        def getRuleIndex(self):
            return AlgoPractiseParser.RULE_stmts

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmts" ):
                listener.enterStmts(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmts" ):
                listener.exitStmts(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmts" ):
                return visitor.visitStmts(self)
            else:
                return visitor.visitChildren(self)




    def stmts(self):

        localctx = AlgoPractiseParser.StmtsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_stmts)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 139
                    self.stmt()
                    self.state = 141 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 140
                        self.match(AlgoPractiseParser.NEWLINE)
                        self.state = 143 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==35):
                            break


                else:
                    raise NoViableAltException(self)
                self.state = 147 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dcl(self):
            return self.getTypedRuleContext(AlgoPractiseParser.DclContext,0)


        def assign_stmt(self):
            return self.getTypedRuleContext(AlgoPractiseParser.Assign_stmtContext,0)


        def cntrol(self):
            return self.getTypedRuleContext(AlgoPractiseParser.CntrolContext,0)


        def func_call(self):
            return self.getTypedRuleContext(AlgoPractiseParser.Func_callContext,0)


        def RETURN(self):
            return self.getToken(AlgoPractiseParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(AlgoPractiseParser.ExprContext,0)


        def getRuleIndex(self):
            return AlgoPractiseParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = AlgoPractiseParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_stmt)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.dcl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.assign_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 151
                self.cntrol()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 152
                self.func_call()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 153
                self.match(AlgoPractiseParser.RETURN)
                self.state = 154
                self.expr(0)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 155
                self.match(AlgoPractiseParser.RETURN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(AlgoPractiseParser.TypeContext,0)


        def assign_stmt(self):
            return self.getTypedRuleContext(AlgoPractiseParser.Assign_stmtContext,0)


        def ID(self):
            return self.getToken(AlgoPractiseParser.ID, 0)

        def getRuleIndex(self):
            return AlgoPractiseParser.RULE_dcl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDcl" ):
                listener.enterDcl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDcl" ):
                listener.exitDcl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDcl" ):
                return visitor.visitDcl(self)
            else:
                return visitor.visitChildren(self)




    def dcl(self):

        localctx = AlgoPractiseParser.DclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_dcl)
        try:
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.type_()
                self.state = 159
                self.assign_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.type_()
                self.state = 162
                self.match(AlgoPractiseParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AlgoPractiseParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(AlgoPractiseParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(AlgoPractiseParser.ExprContext,0)


        def getRuleIndex(self):
            return AlgoPractiseParser.RULE_assign_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign_stmt" ):
                listener.enterAssign_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign_stmt" ):
                listener.exitAssign_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_stmt" ):
                return visitor.visitAssign_stmt(self)
            else:
                return visitor.visitChildren(self)




    def assign_stmt(self):

        localctx = AlgoPractiseParser.Assign_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_assign_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(AlgoPractiseParser.ID)
            self.state = 167
            self.match(AlgoPractiseParser.ASSIGN)
            self.state = 168
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEG(self):
            return self.getToken(AlgoPractiseParser.NEG, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoPractiseParser.ExprContext)
            else:
                return self.getTypedRuleContext(AlgoPractiseParser.ExprContext,i)


        def val(self):
            return self.getTypedRuleContext(AlgoPractiseParser.ValContext,0)


        def L_PAR(self):
            return self.getToken(AlgoPractiseParser.L_PAR, 0)

        def R_PAR(self):
            return self.getToken(AlgoPractiseParser.R_PAR, 0)

        def OR(self):
            return self.getToken(AlgoPractiseParser.OR, 0)
